--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breakout Game</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
+
 <body>
 
-    <div id="game-area">
-        
-        <div id="score-board">Score: <span id="score">0</span></div>
+        <div id="game-area">
 
-        <div id="lives">❤️❤️❤️</div>
+            <div id="score-board">Score: <span id="score">0</span></div>
 
-        <div id="timer">00:00</div>
-        
-        <div id="start-message">Press <strong>SPACE</strong> to Start</div>
+            <div id="lives"></div>
 
-        <div id="bricks-container">
-       
+            <div id="timer">00:00</div>
+
+            <div id="start-message">Press <strong>SPACE</strong> to Start</div>
+
+            <div id="bricks-container">
+
+            </div>
+
+            <div id="paddle"></div>
+
+            <div id="ball"></div>
+
         </div>
 
-        <div id="paddle"></div>
 
-        <div id="ball"></div>
-
-    </div>
 
     <script type='module' src="../js/main.js"></script>
 </body>
+
 </html>
