--- a/templates/index.html
+++ b/templates/index.html
@@ -6,30 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breakout Game</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="icon" href="../images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
 
-        <div id="game-area">
+    <div id="game-area">
 
+        <div id="game-stats">
             <div id="score-board">Score: <span id="score">0</span></div>
 
-            <div id="lives"></div>
+           
+            <div id="level"></div>
 
             <div id="timer">00:00</div>
+             <div id="lives"></div>
+        </div>
 
-            <div id="start-message">Press <strong>SPACE</strong> to Start</div>
 
-            <div id="bricks-container">
+        <div id="start-message">Press <strong>SPACE</strong> to Start</div>
 
-            </div>
-
-            <div id="paddle"></div>
-
-            <div id="ball"></div>
+        <div id="bricks-container">
 
         </div>
 
+        <div id="paddle"></div>
+
+        <div id="ball"></div>
+
+    </div>
+    <div id="pause_continue_messege"></div>
 
 
     <script type='module' src="../js/main.js"></script>
